; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_misc.c_print_mbuf.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/nimble/blecent/main/extr_misc.c_print_mbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_mbuf = type { i32, i32* }

@INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c":\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"%s0x%02x\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@om_next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_mbuf(%struct.os_mbuf* %0) #0 {
  %2 = alloca %struct.os_mbuf*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.os_mbuf* %0, %struct.os_mbuf** %2, align 8
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %39, %1
  %6 = load %struct.os_mbuf*, %struct.os_mbuf** %2, align 8
  %7 = icmp ne %struct.os_mbuf* %6, null
  br i1 %7, label %8, label %43

8:                                                ; preds = %5
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32, i32* @INFO, align 4
  %13 = call i32 (i32, i8*, ...) @MODLOG_DFLT(i32 %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %15

14:                                               ; preds = %8
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %11
  store i32 0, i32* %4, align 4
  br label %16

16:                                               ; preds = %36, %15
  %17 = load i32, i32* %4, align 4
  %18 = load %struct.os_mbuf*, %struct.os_mbuf** %2, align 8
  %19 = getelementptr inbounds %struct.os_mbuf, %struct.os_mbuf* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp slt i32 %17, %20
  br i1 %21, label %22, label %39

22:                                               ; preds = %16
  %23 = load i32, i32* @INFO, align 4
  %24 = load i32, i32* %4, align 4
  %25 = icmp ne i32 %24, 0
  %26 = zext i1 %25 to i64
  %27 = select i1 %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %28 = load %struct.os_mbuf*, %struct.os_mbuf** %2, align 8
  %29 = getelementptr inbounds %struct.os_mbuf, %struct.os_mbuf* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = load i32, i32* %4, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i32, i32* %30, i64 %32
  %34 = load i32, i32* %33, align 4
  %35 = call i32 (i32, i8*, ...) @MODLOG_DFLT(i32 %23, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %27, i32 %34)
  br label %36

36:                                               ; preds = %22
  %37 = load i32, i32* %4, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %4, align 4
  br label %16

39:                                               ; preds = %16
  %40 = load %struct.os_mbuf*, %struct.os_mbuf** %2, align 8
  %41 = load i32, i32* @om_next, align 4
  %42 = call %struct.os_mbuf* @SLIST_NEXT(%struct.os_mbuf* %40, i32 %41)
  store %struct.os_mbuf* %42, %struct.os_mbuf** %2, align 8
  br label %5

43:                                               ; preds = %5
  ret void
}

declare dso_local i32 @MODLOG_DFLT(i32, i8*, ...) #1

declare dso_local %struct.os_mbuf* @SLIST_NEXT(%struct.os_mbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
